manifests/istio-resources/gateway-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: http://keycloak.auth.svc.cluster.local:8080/realms/os4ml
      jwksUri: http://keycloak.auth.svc.cluster.local:8080/realms/os4ml/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: http://keycloak.auth.svc.cluster.local:8080/realms/master
      jwksUri: http://keycloak.auth.svc.cluster.local:8080/realms/master/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: http://keycloak.auth.svc.cluster.local:8080/realms/shepard
      jwksUri: http://keycloak.auth.svc.cluster.local:8080/realms/shepard/protocol/openid-connect/certs
      forwardOriginalToken: true
---
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: CUSTOM
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
  provider:
    name: "oauth2-proxy"
  rules: []
